--- a/Self_assessment.ipynb
+++ b/Self_assessment.ipynb
@@ -401,7 +401,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from check_answers import calculate_score\n",
+    "from solution.check_answers import calculate_score\n",
     "\n",
     "calculate_score(globals())"
    ]
