--- a/solution/Self_assessment_solution.ipynb
+++ b/solution/Self_assessment_solution.ipynb
@@ -287,11 +287,18 @@
    "metadata": {},
    "source": [
     "# 13. `if` statements\n",
-    "Modify the function from question #11 so that:\n",
-    "- it uses the `snowfall_dictionary` from question 8\n",
+    "Finish the function so that:\n",
     "- it prints the name of the city, then a colon, then the value (example: `Boulder: 3.2`)\n",
     "- the snowfall value is only printed out if it is greater than 3\n",
-    "- if the snowfall is 0, print out \"No snow!\"."
+    "- if the snowfall is 0, print out the city name, then a colon, then \"No snow!\".\n",
+    "\n",
+    "You can test it with the `snowfall_dictionary`. Your results should look like: \n",
+    "\n",
+    "```\n",
+    "Boulder: 3.2\n",
+    "Nederland: 7.7\n",
+    "Phoenix: No snow!\n",
+    "```"
    ]
   },
   {
