--- a/Self_assessment.ipynb
+++ b/Self_assessment.ipynb
@@ -286,9 +286,15 @@
     "Finish the function so that:\n",
     "- it prints the name of the city, then a colon, then the value (example: `Boulder: 3.2`)\n",
     "- the snowfall value is only printed out if it is greater than 3\n",
-    "- if the snowfall is 0, print out \"No snow!\".\n",
+    "- if the snowfall is 0, print out the city name, then a colon, then \"No snow!\".\n",
     "\n",
-    "You can test it with the `snowfall_dictionary`."
+    "You can test it with the `snowfall_dictionary`. Your results should look like: \n",
+    "\n",
+    "```\n",
+    "Boulder: 3.2\n",
+    "Nederland: 7.7\n",
+    "Phoenix: No snow!\n",
+    "```"
    ]
   },
   {
