--- a/Self_assessment.ipynb
+++ b/Self_assessment.ipynb
@@ -20,9 +20,9 @@
    "source": [
     "Complete the problems in this notebook, then run the cell at the end to calculate your score and see which questions you got right and wrong. If you don't know the answer to a question you can leave it blank.\n",
     "\n",
-    "- There is no time limit, although this shouldn't take more than 30 minutes.\n",
+    "- There is no time limit, although this shouldn't take more than an hour.\n",
     "- Feel free to use any resources while completing this self-assessment.\n",
-    "- You should score at least 50%, which means you should get at least 8 of the 15 questions correct.\n",
+    "- You should get at least 5 of the 15 questions correct.\n",
     "- Be careful to type things exactly, typos will cause you to miss questions."
    ]
   },
@@ -417,7 +417,7 @@
    "id": "marine-breakdown",
    "metadata": {},
    "source": [
-    " If you scored under 50% or this took you more than an hour to complete, you should consider doing one of the following:\n",
+    " If you got fewer than 5 questions correct or this took you more than an hour to complete, you should consider doing one of the following:\n",
     "\n",
     "- take MSC575 Statistical Computing from Regis\n",
     "- use online resources to learn some Python basics\n",
