add video tutorial and heading

--- a/Self_assessment.ipynb
+++ b/Self_assessment.ipynb
@@ -5,6 +5,8 @@
    "id": "reverse-assault",
    "metadata": {},
    "source": [
+    "# Overview and Instructions\n",
+    "This assessment covers:\n",
     "- datatypes\n",
     "- math operators\n",
     "- data structures: lists, dictionaries\n",
