improve instructions and update the links

--- a/Self_assessment.ipynb
+++ b/Self_assessment.ipynb
@@ -6,26 +6,23 @@
    "metadata": {},
    "source": [
     "# Overview and Instructions\n",
-    "This assessment covers:\n",
-    "- datatypes\n",
-    "- math operators\n",
-    "- data structures: lists, dictionaries\n",
-    "- loops, control flow\n",
-    "- functions\n",
-    "- packages and modules"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "destroyed-invalid",
-   "metadata": {},
-   "source": [
-    "Complete the problems in this notebook, then run the cell at the end to calculate your score and see which questions you got right and wrong. If you don't know the answer to a question you can leave it blank.\n",
     "\n",
+    "This assessment covers the following topics:\n",
+    "\n",
+    "- **Datatypes**\n",
+    "- **Math Operators**\n",
+    "- **Data Structures**: Lists, Dictionaries\n",
+    "- **Loops and Control Flow**\n",
+    "- **Functions**\n",
+    "- **Packages and Modules**\n",
+    "\n",
+    "Instructions:\n",
+    "\n",
+    "- Complete the problems in this notebook, then run the cell at the end to calculate your score and see which questions you got right and wrong.\n",
     "- There is no time limit, although this shouldn't take more than an hour.\n",
     "- Feel free to use any resources while completing this self-assessment.\n",
     "- You should get at least 5 of the 15 questions correct.\n",
-    "- Be careful to type things exactly, typos will cause you to miss questions."
+    "- Be careful to type things exactly, as typos will cause you to miss questions."
    ]
   },
   {
@@ -33,8 +30,13 @@
    "id": "transparent-brother",
    "metadata": {},
    "source": [
-    "# 1. Simple math\n",
-    "Using the variables a, b, and c, multiply 17 by 7, then divide by 5 and round down to the nearest integer."
+    "<!-- Using the variables  `a`, `b`, and `c`, multiply 17 by 7, then divide by 5 and round down to the nearest integer. -->\n",
+    "# 1. Simple Math\n",
+    "Using the variables `a`, `b`, and `c`, perform the following operations:\n",
+    "\n",
+    "1. Multiply `a` by `b`.\n",
+    "2. Divide the result by `c`.\n",
+    "3. Round down to the nearest integer."
    ]
   },
   {
@@ -55,8 +57,8 @@
    "id": "becoming-mobile",
    "metadata": {},
    "source": [
-    "# 2. Math and strings\n",
-    "Modify the code below so that it runs properly. We want the variable `ans` to contain a string with the average number of people per US state. The number of people should be a round number (integer) rounded to the next-lowest value."
+    "# 2. Math and Strings\n",
+    "Modify the code below so that it runs properly. We want the variable `ans_2` to contain a string with the average number of people per US state. The number of people should be a round number (integer) rounded down to the nearest integer."
    ]
   },
   {
@@ -74,8 +76,11 @@
    "id": "freelance-marshall",
    "metadata": {},
    "source": [
+    "<!-- # 3. Variables\n",
+    "Create a new variable called `total_snowfall` that gets the average of the `day1` and `day2` values. -->\n",
+    "\n",
     "# 3. Variables\n",
-    "Create a new variable called `total_snowfall` that gets the average of the `day1` and `day2` values."
+    "Calculate the average snowfall over two days. Create a new variable called `total_snowfall` that stores the average of the `day1` and `day2` values."
    ]
   },
   {
@@ -86,7 +91,7 @@
    "outputs": [],
    "source": [
     "day1 = 5.5\n",
-    "day2 = 17.2\n"
+    "day2 = 17.2"
    ]
   },
   {
@@ -94,7 +99,7 @@
    "id": "sixth-marsh",
    "metadata": {},
    "source": [
-    "# 4. Lists\n",
+    "<!-- # 4. Lists\n",
     "Create a list with the values of snowfall (from top to bottom) from the following table:\n",
     "\n",
     "| City          | Snowfall |\n",
@@ -102,7 +107,17 @@
     "| Denver        | 2.1      |\n",
     "| Boulder       | 3.2      |\n",
     "| Nederland     | 7.7      |\n",
-    "| Phoenix       |   0      |"
+    "| Phoenix       |   0      | -->\n",
+    "\n",
+    "# 4. Lists\n",
+    "Create a list named `snowfall_list` with the snowfall (from top to bottom) values from the table below:\n",
+    "\n",
+    "| City      | Snowfall |\n",
+    "|-----------|----------|\n",
+    "| Denver    | 2.1      |\n",
+    "| Boulder   | 3.2      |\n",
+    "| Nederland | 7.7      |\n",
+    "| Phoenix   | 0.0      |"
    ]
   },
   {
@@ -139,8 +154,11 @@
    "id": "wired-solid",
    "metadata": {},
    "source": [
+    "<!-- # 6. Lists part 3\n",
+    "Store the length of the list in the `num_cities` variable. -->\n",
+    "\n",
     "# 6. Lists part 3\n",
-    "Store the length of the list in the `num_cities` variable."
+    "Calculate and store the length of `snowfall_list` in the variable `num_cities`."
    ]
   },
   {
@@ -159,7 +177,7 @@
    "metadata": {},
    "source": [
     "# 7. Lists part 4\n",
-    "Using the `append()` method of lists, add one more value to the end of the `sun_index` list below: 17."
+    "Using the `append()` method of lists, add the value 17 to the end of the `sun_index` list."
    ]
   },
   {
@@ -177,15 +195,25 @@
    "id": "raised-fundamentals",
    "metadata": {},
    "source": [
-    "# 8. Dictionaries\n",
-    "Create a dictionary from the snowfall table that has the city name as keys and the snowfall as values.\n",
+    "<!-- # 8. Dictionaries\n",
+    "Create a dictionary named `snowfall_dictionary` from the\n",
     "\n",
     "| City          | Snowfall |\n",
     "|---------------|----------|\n",
     "| Denver        | 2.1      |\n",
     "| Boulder       | 3.2      |\n",
     "| Nederland     | 7.7      |\n",
-    "| Phoenix       |   0      |"
+    "| Phoenix       |   0      | -->\n",
+    "\n",
+    "# 8. Dictionaries\n",
+    "Create a dictionary named `snowfall_dictionary` from the snowfall table below, where the city names are the keys and the snowfall values are the values.\n",
+    "\n",
+    "| City      | Snowfall |\n",
+    "|-----------|----------|\n",
+    "| Denver    | 2.1      |\n",
+    "| Boulder   | 3.2      |\n",
+    "| Nederland | 7.7      |\n",
+    "| Phoenix   | 0.0      |"
    ]
   },
   {
@@ -203,8 +231,11 @@
    "id": "running-gnome",
    "metadata": {},
    "source": [
+    "<!-- # 9. Dictionaries part 2\n",
+    "Retrieve the value for Boulder's snowfall from `snowfall_dictionary`. -->\n",
+    "\n",
     "# 9. Dictionaries part 2\n",
-    "Retrieve the value for Boulder's snowfall from `snowfall_dictionary`."
+    "Retrieve the snowfall value for Boulder from the `snowfall_dictionary` and store it in the variable `boulder_snowfall`."
    ]
   },
   {
@@ -223,7 +254,10 @@
    "metadata": {},
    "source": [
     "# 10. Functions\n",
-    "Complete the function to retrieve the biggest snowfall value from the input list to the function."
+    "Complete the function `get_biggest_snowfall` to retrieve the largest snowfall value from the input list `a_snowfall_list`.\n",
+    "\n",
+    "<!-- # 10. Functions\n",
+    "Complete the function to retrieve the biggest snowfall value from the input list to the function. -->"
    ]
   },
   {
@@ -242,8 +276,11 @@
    "id": "earlier-friend",
    "metadata": {},
    "source": [
+    "<!-- # 11. `for` loops\n",
+    "Loop through `snowfall_list` and complete the function to print out each snowfall value. -->\n",
+    "\n",
     "# 11. `for` loops\n",
-    "Loop through `snowfall_list` and complete the function to print out each snowfall value."
+    "Complete the function to loop through `snowfall_list` and print out each snowfall value."
    ]
   },
   {
@@ -263,7 +300,10 @@
    "metadata": {},
    "source": [
     "# 12. `while` loops\n",
-    "Modify the code so the loop terminates when the counter has reached 10."
+    "Modify the code below so that the loop terminates when the `counter` reaches 10.\n",
+    "\n",
+    "<!-- # 12. `while` loops\n",
+    "Modify the code so the loop terminates when the counter has reached 10. -->"
    ]
   },
   {
@@ -285,6 +325,22 @@
    "metadata": {},
    "source": [
     "# 13. `if` statements\n",
+    "Complete the function `print_snowfall` so that it:\n",
+    "\n",
+    "- Prints the name of the city, followed by a colon, and then the snowfall value (e.g., `Boulder: 3.2`).\n",
+    "- Only prints the snowfall value if it is greater than 3.\n",
+    "- If the snowfall is 0, prints the city name followed by a colon and \"No snow!\" (e.g., `Phoenix: No snow!`).\n",
+    "\n",
+    "You can test it with the `snowfall_dictionary`. Your results should look like:\n",
+    "\n",
+    "```\n",
+    "Boulder: 3.2\n",
+    "Nederland: 7.7\n",
+    "Phoenix: No snow!\n",
+    "```\n",
+    "\n",
+    "<!-- \n",
+    "# 13. `if` statements\n",
     "Finish the function so that:\n",
     "- it prints the name of the city, then a colon, then the value (example: `Boulder: 3.2`)\n",
     "- the snowfall value is only printed out if it is greater than 3\n",
@@ -296,7 +352,7 @@
     "Boulder: 3.2\n",
     "Nederland: 7.7\n",
     "Phoenix: No snow!\n",
-    "```"
+    "``` -->"
    ]
   },
   {
@@ -316,9 +372,9 @@
    "metadata": {},
    "source": [
     "# 14. Classes\n",
-    "Create a new variable from the `Mortgage` class called 'new_mortgage'. The loan should be for a value of 10,000 with an annual rate of 8.5% (use 0.085 for the interest rate) for 2 years. Use the `makePayment()` method once to simulate making a single payment on the loan.\n",
+    "Create a new variable from the `Mortgage` class called `new_mortgage`. The loan should be for a value of 10,000 with an annual rate of 8.5% (use 0.085 for the interest rate) for 2 years. Use the `makePayment()` method once to simulate making a single payment on the loan.\n",
     "\n",
-    "(The code below is from the book used in MSC575: *Introduction to Computation and Programming Using Python* by Guttag)."
+    "(The code below is from the book used in MSC575: *Introduction to Computation and Programming Using Python* by John V. Guttag)."
    ]
   },
   {
@@ -419,6 +475,19 @@
    "id": "marine-breakdown",
    "metadata": {},
    "source": [
+    "If you got fewer than 5 questions correct or this took you more than an hour to complete, consider doing one of the following:\n",
+    "\n",
+    "- Take MSC575 Statistical Computing from Regis\n",
+    "- Use online resources to learn some Python basics\n",
+    "\n",
+    "Some good online resources for learning Python are:\n",
+    "- [Udacity: Introduction to Python Programming](https://www.udacity.com/course/introduction-to-python--ud1110)\n",
+    "- [Kaggle: Python](https://www.kaggle.com/learn/overview) (not intended for complete beginners)\n",
+    "- [DataQuest: Introduction to Python Programming](https://www.dataquest.io/course/introduction-to-python/)\n",
+    "- [DataCamp: Python Data Fundamentals](https://www.datacamp.com/tracks/python-data-fundamentals) (intro/intermediate Python courses)\n",
+    "- [Coursera: Python for Everybody Specialization](https://www.coursera.org/specializations/python)\n",
+    "\n",
+    "<!-- \n",
     " If you got fewer than 5 questions correct or this took you more than an hour to complete, you should consider doing one of the following:\n",
     "\n",
     "- take MSC575 Statistical Computing from Regis\n",
@@ -429,13 +498,19 @@
     "- [Kaggle](https://www.kaggle.com/learn/overview) (not intended for complete beginners)\n",
     "- [DataQuest](https://www.dataquest.io/course/python-for-data-science-fundamentals/)\n",
     "- [DataCamp's Python track](https://www.datacamp.com/tracks/python-fundamentals) (the intro/intermediate Python courses)\n",
-    "- [Coursera](https://www.coursera.org/learn/python)"
+    "- [Coursera](https://www.coursera.org/learn/python) -->"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2edeef50",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "regis",
    "language": "python",
    "name": "python3"
   },
@@ -449,7 +524,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
